[package]
name = "frp-gaming-lib"
version = "0.1.0"
authors = ["g2xpf <nameko.jack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodium-rust = "2.1.1"
glium = "0.29.0"
im = "15.0.0"
dyn-clone = "1.0.4"
